# pico2-ice

./: .gitignore  .gitmodules  CNAME  LICENSE  README.md
.github/workflows/: pages.yml
Board/Rev0/: fp-info-cache  fp-lib-table  pico-ice.step  pico2-ice.kicad_pcb  pico2-ice.kicad_prl  pico2-ice.kicad_pro  pico2-ice.kicad_sch  sym-lib-table
Board/Rev0/Assembly/: pico2-ice-all-pos.csv  pico2-ice-bottom-pos.csv  pico2-ice-top-pos.csv  pico2-ice_BoM.csv  pico2-ice_BoM2.csv
Board/Rev0/CUSTOM.pretty/: LED_Cree-PLCC4_1x1mm_CW.kicad_mod
Board/Rev0/Fabrication/: pico2-ice-B_Cu.gbr  pico2-ice-B_Fab.gbr  pico2-ice-B_Mask.gbr  pico2-ice-B_Paste.gbr  pico2-ice-B_Silkscreen.gbr  pico2-ice-Edge_Cuts.gbr  pico2-ice-F_Cu.gbr  pico2-ice-F_Fab.gbr  pico2-ice-F_Mask.gbr  pico2-ice-F_Paste.gbr  pico2-ice-F_Silkscreen.gbr  pico2-ice-In1_Cu.gbr  pico2-ice-In2_Cu.gbr  pico2-ice-Margin.gbr  pico2-ice-NPTH-drl_map.gbr  pico2-ice-NPTH.drl  pico2-ice-PTH-drl_map.gbr  pico2-ice-PTH.drl  pico2-ice-User_Drawings.gbr
Board/Rev0/jlcpcb/: pico2-ice-all-pos.csv  pico2-ice_BoM.csv  pico2-ice_BoM.txt
Board/Rev1/: pico2-ice.kicad_pcb  pico2-ice.kicad_prl  pico2-ice.kicad_pro  pico2-ice.kicad_sch
Board/Rev1/Fabrication_pico2-ice/: pico2-ice.d356
Board/Rev2/: pico2-ice.kicad_pcb  pico2-ice.kicad_prl  pico2-ice.kicad_pro  pico2-ice.kicad_sch
Board/Rev2/bom/: ibom.html  (+1 more)
Docs/: .gitignore  Doxyfile  DoxygenLayout.xml  getting_started.md  index.md  learn.md  mpy.md  pinout.md  pmods.md  programming_the_fpga.md  programming_the_mcu.md
Docs/html/: doxygen_crawl.html  index.html  md_getting__started.html  md_learn.html  md_mpy.html  md_pinout.html  md_pmods.html  md_programming__the__fpga.html  md_programming__the__mcu.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html
Docs/images/: pico2_ice.drawio
Docs/latex/: index.tex  md_getting__started.tex  md_learn.tex  md_mpy.tex  md_pinout.tex  md_pmods.tex  md_programming__the__fpga.tex  md_programming__the__mcu.tex  refman.tex
Firmware/pico2-ice-default/: CMakeLists.txt  README.md  main.c  pico2_ice_default.uf2  tusb_config.h
(+75 files in other folders)
